Add last corrections

--- a/Tesis/bibliografia.bib
+++ b/Tesis/bibliografia.bib
@@ -621,3 +621,20 @@ note = {Accessed: 2023-11-18}
   url={https://api.semanticscholar.org/CorpusID:265320832}
 }
 
+@article{DoomstersBoostersPerspectives,
+  title={New information technologies and the ambiguous future of schooling—Some possible scenarios},
+  author={Bigum, Chris and Kenway, Jane},
+  journal={International Handbook of Educational Change: Part One},
+  pages={375--395},
+  year={1998},
+  publisher={Springer}
+}
+
+@inproceedings{surti2023NeoRoute,
+  title={NeoRoute: A Pathfinding Algorithm Visualizer},
+  author={Surti, Rohan and Desai, Amey and Rana, Sohendar and Sankhe, Manthan and Mane, Yogita},
+  booktitle={2023 International Conference on Advanced Computing Technologies and Applications (ICACTA)},
+  pages={1--5},
+  year={2023},
+  organization={IEEE}
+}
