--- a/Tesis/metodologia.tex
+++ b/Tesis/metodologia.tex
@@ -1,21 +1,20 @@
 \chapter{Diseño experimental: Metodología}
 
-El objetivo de este trabajo fue poner a prueba la hipótesis de que un videojuego educativo puede enseñar algoritmos relacionados a grafos y que puede ser percibido positivamente por parte de los estudiantes.
+El propósito de este trabajo fue poner a prueba la hipótesis de que un videojuego educativo puede enseñar algoritmos relacionados con grafos y que puede ser percibido positivamente por parte de los estudiantes.
 
-La comprobación de tales hipótesis se llevó a cabo mediante un experimento donde se le pide a personas voluntarias responder ciertas preguntas después de probar la aplicación. Esta se considera una metodología simple según \cite{HowGamesComputingEducationEvaluated}. 
+Para ello, se llevó a cabo un experimento en el que se solicitó a voluntarios que respondieran ciertas preguntas después de probar la aplicación. Este enfoque se considera una metodología simple según \cite{HowGamesComputingEducationEvaluated}, es importante destacar que no es el más adecuado para este tipo de estudios, ya que la mayor validez científica se obtiene con una metodología pre/post/post y un tamaño muestral de 40 individuos o más.
 
-Este tipo de metodología no es ideal en este tipo de estudios \cite{HowGamesComputingEducationEvaluated}. La mayor validez científica se da con una metodología pre/post/post con un tamaño muestral de 40 individuos o más. 
+Sin embargo, implementar este tipo de estudios requiere más tiempo por parte de los voluntarios, así como mayores incentivos para su participación y respaldo institucional. Para ejemplificar esto último, la participación en este estudio podría formar parte de una actividad pedagógica en un curso y ser obligatoria.
 
-Sin embargo, este tipo de estudios requieren más tiempo por parte de los voluntarios, mayores incentivos a la participación y respaldo institucional. Por ejemplo, la participación podría ser una actividad pedagógica en un curso y exigir que sea obligatoria.
+Se sugieren buenas prácticas metodológicas en \cite{Rogers2002InteractionDesign, MeegaPlusManual, HowGamesComputingEducationEvaluated}, donde se establecen ideas primordiales para identificar las dificultades a resolver. Además, se destaca la importancia de realizar validaciones con tamaños muestrales significativos y representativos del usuario al que está destinado el trabajo. Asimismo, se sugiere aprovechar tecnologías como eye-tracking y telemetría. Sin embargo, la obtención de voluntarios para participar en las pruebas fue un desafío, sobre todo considerando que aquellos que participaran en una prueba inicial no podrían formar parte de las pruebas finales, que se consideraban más relevantes.
 
-Se sugieren buenas prácticas metodológicas en \cite{Rogers2002InteractionDesign, MeegaPlusManual, HowGamesComputingEducationEvaluated}, donde se define un conjunto de ideas primarias, identificando cuáles son las dificultades a resolver. 
-
-Además, realizar validaciones con tamaños muestrales significativos y representativos del usuario al que está destinado el trabajo. También se sugiere aprovechar tecnologías como eye-tracking y telemetría. Sin embargo, se hizo complejo obtener voluntarios para participar en las pruebas, sobretodo considerando que aquellas personas que participaran en una prueba después no podrían formar parte de las pruebas finales, que se consideraban más relevantes.
+Se sugieren buenas prácticas metodológicas en \cite{Rogers2002InteractionDesign, MeegaPlusManual, HowGamesComputingEducationEvaluated}, donde se establecen ideas primordiales para identificar las dificultades a resolver. Además, se destaca la importancia de realizar validaciones con tamaños muestrales significativos y representativos del usuario al que está destinado el trabajo. Asimismo, se sugiere aprovechar tecnologías como eye-tracking y telemetría. Sin embargo, la obtención de voluntarios para participar en las pruebas fue un desafío, sobre todo considerando que aquellos que participaran en una prueba inicial no podrían formar parte de las pruebas finales, que se consideraban más relevantes.
 
 
 \section{Fases del trabajo de investigación}
 
-El trabajo se dividió en tres fases, las cuales constaron de distintas preguntas después de probar la aplicación.
+El trabajo se dividió en tres fases, las cuales constan de distintas preguntas después de probar la aplicación.
+
 
 \subsection{Fase exploratoria}
 
@@ -23,21 +22,29 @@ En esta primera fase, el objetivo fue recopilar retroalimentación y opiniones d
 
 En segundo lugar, los usuarios expertos tienden a expresarse de manera más natural cuando pueden emitir opiniones en el momento, por lo que se prefirió evitar encuestas o escalas posteriores a la experiencia. Resulta crucial que los expertos expresen sus impresiones a medida que los elementos del videojuego aparecen en pantalla y no después de la experiencia, para comprender mejor lo experimentado al usar la aplicación por primera vez. Hay animaciones que deben captar la atención en el momento, como la pista visual del ratón indicando al usuario que haga clic izquierdo en un planeta.
 
-Esta fase concluyó una vez que se observó que cinco usuarios expertos pudieron completar la prueba de principio a fin sin inconvenientes ni necesidad de pedir ayuda. Estas cinco personas debían cumplir la condición de no tener conocimiento previo sobre el juego.
+Este desarrollo fue iterativo. Primero se hacían cambios a la aplicación basados en los últimos comentarios recibidos. Luego, se le mostraba la aplicación a usuarios expertos, estos daban su opinión y se volvían a aplicar los cambios. Este proceso se hizo 8 veces con el curso ``CC7970 - Trabajo de Tesis I''.
+
 
 \subsection{Fase de evaluación académica y percepción de usuario}
 
 En esta fase, se logró la participación completa de una muestra de 15 personas, a quienes se les ofreció un incentivo monetario para evitar sesgos asociados a la voluntariedad y para aumentar la participación \cite{Marinescu2018IncentivesCR, Dallmeyer2023ToPayOrNot}.
 
-Para iniciar esta etapa, se realizó una convocatoria voluntaria en el foro de las secciones de Algoritmos y Estructuras de Datos de la Universidad de Chile durante el semestre de primavera del año 2023. Se ofreció una remuneración a todas las personas que completaran la experiencia, que tenía una duración promedio de 45 minutos. La experiencia constaba de tres partes: realizar la prueba de usuario, completar un formulario que utilizaba la escala de Likert basado en el modelo MEEGA+ \cite{meegaplus}, y responder a una prueba escrita basada en exámenes previos del curso Algoritmos y Estructuras de Datos.
+Para iniciar esta etapa, se realizó una convocatoria voluntaria en el foro de las tres secciones de Algoritmos y Estructuras de Datos de la Universidad de Chile durante las primeras dos semanas del semestre de primavera del año 2023. Se ofreció una remuneración a todas las personas que completaran la experiencia, la cual tenía una duración promedio de 45 minutos. 
 
-El modelo sistemático MEEGA+ \cite{meegaplus} está diseñado para evaluar videojuegos educativos, buscando evaluar la percepción de la calidad de un videojuego desde la perspectiva del estudiante en el contexto de la enseñanza de la computación. El formulario utilizado en este estudio, basado en MEEGA+ \cite{meegaplus}, se encuentra en el \hyperref[AnexoA]{anexo A}.
+Las personas que rinden este curso suelen estar en su quinto semestre de la carrera, aunque algunas también lo rinden de forma más tardía en sus carreras, sobre todo cuando son de otras especialidades como Ingeniería Eléctrica o Industrial. Estos suelen tener nociones de programación, como declaración de variables y control de flujo, pero no necesariamente sobre estructuras de datos. Estos estudiantes rondan los 21 a 23  años de edad.
 
-La medición del rendimiento académico se lleva a cabo mediante una prueba escrita con dos preguntas, basadas en una pregunta de un examen del ramo de Algoritmos y Estructuras de Datos de la misma facultad. La prueba escrita se encuentra en el anexo \hyperref[AnexoB]{anexo B}.
+La convocatoria se realizó por dos medios. Por una parte, se escribió un mensaje en la comunidad de Telegram invitando a la gente del curso a participar del estudio, y por otra parte, el equipo docente de cada sección del curso CC3001 - Algoritmos y Estructuras de Datos, escribió un mensaje en el foro invitando a sus estudiantes a participar.
+
+
+La experiencia constaba de tres partes: realizar la prueba de usuario, completar un formulario que utilizaba la escala de Likert basado en el modelo MEEGA+ \cite{meegaplus}, y responder a una prueba escrita basada en exámenes previos del curso CC3001 antes mencionado.
+
+El modelo sistemático MEEGA+ \cite{meegaplus} está diseñado para evaluar videojuegos educativos, buscando evaluar la percepción de la calidad de un videojuego desde la perspectiva del estudiante en el contexto de la enseñanza de la computación. El formulario utilizado en este estudio, basado en MEEGA+, se encuentra en el anexo A.
+
+La medición del rendimiento académico se lleva a cabo mediante una prueba escrita con dos preguntas, basadas en una pregunta de un examen del ramo de Algoritmos y Estructuras de Datos de la misma facultad. La prueba escrita se encuentra en el anexo anexo B.
 
 
 \subsection{Encuesta libre}
 
 % Anotar aquí antes de que termine la tesis cuánta gente fue en total.
 
-Con el objetivo de ampliar el estudio y aumentar el tamaño de la muestra, se llevó a cabo una tercera experiencia abierta al público en general con conocimientos en programación. Se emitió una invitación en diversas comunidades de videojuegos para probar el juego educativo y completar el formulario. Dado que las experiencias podían variar significativamente, se incorporó una pregunta sobre el nivel de experiencia en programación para permitir la segmentación. El formulario utilizado también se basó en el modelo MEEGA+, pero las respuestas recolectadas se almacenaron en una base de datos separada del grupo anterior. Aquí se mostraron dos versiones, una en español y otra en inglés para aumentar el tamaño de la muestra. En total, 13 personas participaron de esta experiencia.
+Con el objetivo de ampliar el estudio y aumentar el tamaño de la muestra, se llevó a cabo una tercera experiencia abierta al público en general con conocimientos en programación. Se emitió una invitación en diversas comunidades de videojuegos para probar el juego educativo y completar el formulario. Dado que las experiencias podían variar significativamente, se incorporó una pregunta sobre el nivel de experiencia en programación para permitir la segmentación. El formulario utilizado también se basó en el modelo MEEGA+, pero las respuestas recolectadas se almacenaron en una base de datos separada del grupo anterior. Aquí se mostraron dos versiones, una en español y otra en inglés para aumentar el tamaño de la muestra. En total, 12 personas participaron de esta experiencia.
