--- a/Tesis/conclu.tex
+++ b/Tesis/conclu.tex
@@ -1,10 +1,10 @@
-\chapter{Conclusión}
+\section{Conclusión}
 
-El videojuego ha logrado su objetivo de enseñar los algoritmos de BFS y DFS, como evidencian los resultados obtenidos por estudiantes de informática de la Universidad de Chile. Estos estudiantes demostraron comprender los algoritmos, así como la naturaleza de los grafos, al responder de manera acertada a una prueba asociada al juego.
+El videojuego ha logrado su objetivo de enseñar los algoritmos de BFS y DFS, como evidencian los resultados obtenidos por estudiantes de informática de la Universidad de Chile. Estos estudiantes demostraron comprender los algoritmos, así como la naturaleza de los grafos, al responder de manera acertada a una prueba asociada al juego. Por lo tanto se responde positivamente RQ1.
 
-Por otra parte, el juego ha recibido una evaluación positiva y se considera, según el modelo MEEGA+ \cite{meegaplus}, como un juego de calidad. A pesar de las mejoras identificadas durante el proceso, el juego ha sido bien recibido por los estudiantes, y su percepción positiva puede influir beneficiosamente en la motivación y, por ende, en los resultados académicos.
+Por otra parte, el juego ha recibido una evaluación positiva y se considera, según el modelo MEEGA+ \cite{meegaplus}, como un juego de buena calidad. A pesar de las mejoras identificadas durante el proceso, el juego ha sido bien recibido por los estudiantes, y su percepción positiva puede influye beneficiosamente en la motivación (RQ2) y, por ende, en los resultados académicos.
 
-Las hipótesis planteadas fueron confirmadas. La primera hipótesis indica, que un videojuego que enseña sobre grafos puede enseñar a los estudiantes sobre los algoritmos BFS y DFS se ha comprobado como verdadera. Lo mismo ocurre con la segunda hipótesis, un videojuego que enseñe grafos será percibido de manera positiva por los estudiantes que todavía no aprenden sobre esos contenidos, también es correcta, medida a través del valor $\theta$ entregado por el modelo MEEGA+.
+Las hipótesis planteadas fueron confirmadas. La primera hipótesis (H1) indica, que un videojuego que educa sobre grafos puede enseñar a los estudiantes sobre los algoritmos BFS y DFS se ha comprobado como verdadera. Lo mismo ocurre con la segunda hipótesis (H2), un videojuego que enseñe grafos será percibido de manera positiva por los estudiantes que todavía no aprenden sobre esos contenidos, también es correcta, medida a través del valor $\theta$ entregado por el modelo MEEGA+.
 
 Este trabajo sienta bases para futuras investigaciones, especialmente en relación con el diseño de videojuegos educativos y su impacto en la educación en informática. La metodología utilizada aquí puede ser perfeccionada en trabajos futuros para evaluar mejor la comprensión de los conceptos enseñados mediante este enfoque lúdico.
 
